Tried to reproduce the issue with the node mysql module and the 100% cpu usage is not happening with the node mysql module.

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "4.12.3",
     "generic-pool": "2.4.2",
     "mariasql": "0.2.5",
+    "mysql": "^2.11.1",
     "winston": "1.0.0"
   },
   "devDependencies": {
